--- a/report.tex
+++ b/report.tex
@@ -764,6 +764,9 @@ It is obvious from the picture \ref{fig:parallel_workspace1} that different angl
 \subsection{Mang Ning}
 \input{mang}
 
+\subsection{Conclusion}
+here the conclusion
+
 \appendix
 \section{Matlab codes}
 \subsection{Forward kinematics (LynxFK function)}
