--- a/report.tex
+++ b/report.tex
@@ -765,7 +765,19 @@ It is obvious from the picture \ref{fig:parallel_workspace1} that different angl
 \input{mang}
 
 \subsection{Conclusion}
-here the conclusion
+We think that the most difficult part is Inverse Kinematics problem, the difficulties found to solve this problem are mainly result from the nature of the equations which are non-linear,  transcendental and coupled. To deal with those difficulties we combined the algebraic and the geometric method. Furthermore, it was also tough to implement the trajectories, specially the straight line, because a polynomial approximation was used if not enough via points are provided the trajectory does not fit the straight line.
+
+
+
+
+%----------- Rodrigo's paragraph start ---------------
+
+%----------- Rodrigo's paragraph end ---------------
+
+%----------- Mang's paragraph start ---------------
+
+%----------- Mang's paragraph end ---------------
+
 
 \appendix
 \section{Matlab codes}
