--- a/report.tex
+++ b/report.tex
@@ -808,6 +808,15 @@ We think that the most difficult part is Inverse Kinematics problem, the difficu
 \subsection{Pseudo-inverse Jacobian iterative method}
 \label{apendix:iterative_method}
 \verbatiminput{code/Part3/iterative_ik.m}
+
+\subsection{Producing dataset for neural network}
+\label{apendix:Producing dataset}
+\verbatiminput{code/Part3/Part3_NN_produce_dataset.m}
+
+\subsection{Training nueral network and predicting}
+\label{apendix:Training neural network}
+\verbatiminput{code/Part3/Part3_NN_IK_for_q3.m}
+
 %----------------------------------------------------------------------------------------
 %	BIBLIOGRAPHY
 %----------------------------------------------------------------------------------------
