add introduction part

--- a/report.tex
+++ b/report.tex
@@ -34,6 +34,17 @@ Assignment report} % Title
 
 \maketitle % Insert the title, author and date
 
+\section{Introduction}
+This reprot consists of three sections which are Lynxmotion robot(part 1), parallel robot(part 2) and extensive study(part 3) respectivelly.
+
+Part 1 mainly describes the process of building the robot model from forward kinematics, the combined method of geometry and algebra for solving the inverse kinematics issuse, the meaningful task executed by Lynxmotion robot, the extra tests of forward kinematics and inverse kinematics and the designing of three different trajectories.
+
+Then, the approach of vector chain applied to calculate the inverse kinematics of the parallel robot is stated in part 2. After that, the algebraic method relying on the computing power of Matlab to form the workspace is also illustrated in this sectoin.
+
+Finally, we both expand the learning field by exploring the usage of neural network to work out the inverse kinematics of Lynxmotion robot and  
+
+   
+
 \section{Part 1}
 \subsection{Forward kinematics} 
 
@@ -761,22 +772,19 @@ It is obvious from the picture \ref{fig:parallel_workspace1} that different angl
 \subsection{Rodrigo Moreno Carrillo}
 \input{rodrigo}
 
-\subsection{Mang Ning}
 \input{mang}
 
-\subsection{Conclusion}
-We think that the most difficult part is Inverse Kinematics problem, the difficulties found to solve this problem are mainly result from the nature of the equations which are non-linear,  transcendental and coupled. To deal with those difficulties we combined the algebraic and the geometric method. Furthermore, it was also tough to implement the trajectories, specially the straight line, because a polynomial approximation was used if not enough via points are provided the trajectory does not fit the straight line.
+\section{Conclusion}
+In conclusion, the most difficult section is the inverse kinematics as the difficulties are result from the essence of the equations which are non-linear, transcendental and coupled. To deal with those difficulties we combined the algebraic and the geometric method. Besides, it was also tough to implement the trajectories, specially the straight line, because a polynomial approximation was used if not enough via points are provided the trajectory does not fit the straight line.
 
+Apart from these academic knownledge, we also learned the tool 'LaTeX', 'Github' and 'AutoCAD' which improved the quality and efficience of this assignment. 
 
+Finally, the contributions proportion needs to been stated clearly that Moreno Carrillo contributes $70\%$ and Mang Ning accounts for $30\%$ throughout the assigment.
 
 
 %----------- Rodrigo's paragraph start ---------------
 
 %----------- Rodrigo's paragraph end ---------------
-
-%----------- Mang's paragraph start ---------------
-
-%----------- Mang's paragraph end ---------------
 
 
 \appendix
