Part of conclusion

--- a/biblio.bib
+++ b/biblio.bib
@@ -1,12 +1,22 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Rodrigo Moreno at 2018-12-09 9:39:14 pm +0000 
+%% Created for Rodrigo Moreno at 2018-12-12 10:11:05 pm +0000 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{Haykin:1991,
+	Author = {Simon Haykin},
+	Date-Added = {2018-12-12 10:08:07 pm +0000},
+	Date-Modified = {2018-12-12 10:08:07 pm +0000},
+	Edition = {2º},
+	Keywords = {adaptive, filter},
+	Publisher = {Prentince Hall},
+	Title = {Adaptive Filter Theory},
+	Year = {1991}}
 
 @inproceedings{penrose1955generalized,
 	Author = {Penrose, Roger},
