Last version, readme file and citations fix

--- a/biblio.bib
+++ b/biblio.bib
@@ -1,12 +1,20 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Rodrigo Moreno at 2018-12-12 10:11:05 pm +0000 
+%% Created for Rodrigo Moreno at 2018-12-13 11:20:06 am +0000 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{spong2008robot,
+	Author = {Spong, Mark W and Vidyasagar, Mathukumalli},
+	Date-Added = {2018-12-13 11:19:44 am +0000},
+	Date-Modified = {2018-12-13 11:19:44 am +0000},
+	Publisher = {John Wiley \& Sons},
+	Title = {Robot dynamics and control},
+	Year = {2008}}
 
 @book{Haykin:1991,
 	Author = {Simon Haykin},
@@ -66,21 +74,21 @@
 	Year = {2002}}
 
 @article{qian1999momentum,
-  title={On the momentum term in gradient descent learning algorithms},
-  author={Qian, Ning},
-  journal={Neural networks},
-  volume={12},
-  number={1},
-  pages={145--151},
-  year={1999},
-  publisher={Elsevier}}
+	Author = {Qian, Ning},
+	Journal = {Neural networks},
+	Number = {1},
+	Pages = {145--151},
+	Publisher = {Elsevier},
+	Title = {On the momentum term in gradient descent learning algorithms},
+	Volume = {12},
+	Year = {1999}}
 
 @article{rumelhart1986learning,
-  title={Learning representations by back-propagating errors},
-  author={Rumelhart, David E and Hinton, Geoffrey E and Williams, Ronald J},
-  journal={nature},
-  volume={323},
-  number={6088},
-  pages={533},
-  year={1986},
-  publisher={Nature Publishing Group}}
+	Author = {Rumelhart, David E and Hinton, Geoffrey E and Williams, Ronald J},
+	Journal = {nature},
+	Number = {6088},
+	Pages = {533},
+	Publisher = {Nature Publishing Group},
+	Title = {Learning representations by back-propagating errors},
+	Volume = {323},
+	Year = {1986}}
