--- a/report.tex
+++ b/report.tex
@@ -25,8 +25,8 @@
 \title{Robots Fundamentals:\\
 Assignment report} % Title
 
-\author{Rodrigo \textsc{Moreno Carrillo} \\
-			Mang \textsc{Ning}} % Author name
+\author{Rodrigo \textsc{Moreno Carrillo} \textbf{18044484} \\
+			Mang \textsc{Ning} \textbf{18044489}}  % Author name
 
 \date{\today} % Date for the report 
 \begin{document}
@@ -35,15 +35,14 @@ Assignment report} % Title
 \maketitle % Insert the title, author and date
 
 \section{Introduction}
-This reprot consists of three sections which are Lynxmotion robot(part 1), parallel robot(part 2) and extensive study(part 3) respectivelly.
+This report consists of three sections which are Lynxmotion robot(part 1), parallel robot(part 2) and extensive study(part 3) respectively.
 
-Part 1 mainly describes the process of building the robot model from forward kinematics, the combined method of geometry and algebra for solving the inverse kinematics issuse, the meaningful task executed by Lynxmotion robot, the extra tests of forward kinematics and inverse kinematics and the designing of three different trajectories.
+Firstly, part 1 mainly describes the process of building the robot model from forward kinematics, the combined method of geometric and algebraic for solving the inverse kinematics issue, the meaningful task executed by Lynxmotion robot, the extra tests of forward kinematics and inverse kinematics and the designing of three different trajectories.
 
-Then, the approach of vector chain applied to calculate the inverse kinematics of the parallel robot is stated in part 2. After that, the algebraic method relying on the computing power of Matlab to form the workspace is also illustrated in this sectoin.
+Additionally, the approach of vector chain applied to calculate the inverse kinematics of the parallel robot is stated in part 2. After that, the algebraic method relying on the computing power of Matlab to form the workspace is also illustrated in this section.
 
-Finally, we both expand the learning field by exploring the usage of neural network to work out the inverse kinematics of Lynxmotion robot and  
+Finally, we both expand the learning field by exploring the usage of the pseudo-inverse of the Jacobian in an iterative way and neural network to work out the inverse kinematics problem applied to Lynxmotion robot.
 
-   
 
 \section{Part 1}
 \subsection{Forward kinematics} 
@@ -205,7 +204,7 @@ To compute the forward kinematics in Matlab, a function is created to receive th
 \end{figure}
 
 \subsection{Workspace}
-The operational range of every joint variales $\theta_i$ is necessary for tracing out the workspace.  The relevant parameters are in table \ref{tab:workspace.range}.
+The operational range of every joint variables $\theta_i$ is necessary for tracing out the workspace.  The relevant parameters are in table \ref{tab:workspace.range}.
 
 \begin{table}[h!]
 \centering
@@ -251,7 +250,7 @@ For simplifying the configuration, we can extract link 2 and link 3 from the who
 \T{1}{3} & = \T{1}{0} \T{0}{3}
 \end{align}
 
-According to the equation (\ref{eq:inverse.t_13}), we need to get the matrixes $\T{1}{0}$ and $\T{0}{3}$ respectively. $\T{1}{0}$ is easy to get from the inverse matrix of $\T{0}{1}$, which should be 
+According to the equation (\ref{eq:inverse.t_13}), we need to get the matrices $\T{1}{0}$ and $\T{0}{3}$ respectively. $\T{1}{0}$ is easy to get from the inverse matrix of $\T{0}{1}$, which should be 
 
 \begin{equation}
 \label{eq:inverse.t_10}
@@ -277,7 +276,7 @@ As for  $\T{0}{3}$, we only focus on the displacement part $\O{0}{3}$(the last c
 \end{array} \right]
 \end{equation}
 
-Furthermore, $Z_5$ is aligned with link 4 whose length is $d_5$, so $\O{0}{3}$ can be calculated by
+According with \citep{spong2008robot}, $Z_5$ is aligned with link 4 whose length is $d_5$, so $\O{0}{3}$ can be calculated by
 
 \begin{equation}
 \label{eq:inverse.O_03}
@@ -466,7 +465,7 @@ where
 \end{equation*}
 Consequently, the equation (\ref{eq:inverse.t_45}) depends on the inverse of (\ref{eq:forward.t_34}), (\ref{eq:inverse.t_03}) since $\T{0}{5}$ is a known condition. 
 
-It seems that $\theta_5$ should also have two solutions since $\s{4}$ and $\c{4}$ have 2 pairs of solutions and the expression of $\T{4}{0}$ contains $\s{4}$ and $\c{4}$. Whereas, it turns out that $\T{4}{0}$ only have one value due to the same computing result of 2 pairs of $\s{4}$ and $\c{4}$.For simplicity, (a,b) is used to represent each element of $\T{4}{5}$(a,b are the numble of rows and columns). so, $\s{5}$ and $\c{5}$ can be written as
+It seems that $\theta_5$ should also have two solutions since $\s{4}$ and $\c{4}$ have 2 pairs of solutions and the expression of $\T{4}{0}$ contains $\s{4}$ and $\c{4}$. Whereas, it turns out that $\T{4}{0}$ only have one value due to the same computing result of 2 pairs of $\s{4}$ and $\c{4}$.For simplicity, (a,b) is used to represent each element of $\T{4}{5}$(a,b are the number of rows and columns). so, $\s{5}$ and $\c{5}$ can be written as
 
 \begin{equation}
 \s{5} = \T{4}{5}(2,1)
@@ -479,7 +478,7 @@ Hence,the solutions of $\theta_5$ is
 \end{equation}
 
 \subsection{Task plan}
-The chosen task is to simulate the process of picking three objects and stick them on a wall. In this case the robot should take an object and move it to the target position, then repeat this operation for the remaining twe objects.
+The chosen task is to simulate the process of picking three objects and stick them on a wall. In this case the robot should take an object and move it to the target position, then repeat this operation for the remaining two objects.
 
 These points are chosen inside the workspace, the detail can be seen in the figure \ref{fig:points.points}.
 
@@ -508,7 +507,7 @@ To execute the experiment,the \textit{LynxFK} function is created to take a set 
 For convenience of subsequent inverse kinematics test, the outcomes of the forward kinematics test are saved into a file. 
 
 \subsection{Inverse kinematics test and animation}
-Inverse kinematics calcultes the set of joint values ($\theta_i^{\prime}$) through loading the pair data $P$ and $R$ which are stored in the previous files. Then, for validating the results of the inverse kinematics process, the robot will compute the forward kinematics using the given output which should produce a new set of points, called $P^{\prime}$ and $R^{\prime}$, which should be similar to those used as input for inverse kinematics. This process is depicted by figure \ref{fig:inverse_test.diagram}.
+Inverse kinematics calculates the set of joint values ($\theta_i^{\prime}$) through loading the pair data $P$ and $R$ which are stored in the previous files. Then, for validating the results of the inverse kinematics process, the robot will compute the forward kinematics using the given output which should produce a new set of points, called $P^{\prime}$ and $R^{\prime}$, which should be similar to those used as input for inverse kinematics. This process is depicted by figure \ref{fig:inverse_test.diagram}.
 
 \begin{figure}
 \begin{center}
@@ -572,7 +571,7 @@ All three of these trajectories have been accomplished and combined to achieve a
 \subsubsection{Polynomial trajectories}
 The via point approach is used to implement the desired trajectories to create the paths. Specifically, we compute the coefficients of the polynomials that best fit to those paths.
 
-The considered polynomial trajectory is 4-3-4. This means the first and last trajectory is a polynomial of fourth degree whilst a polynomial of third degree is used for the inner trajectories .
+The considered polynomial trajectory is 4-3-4. This means the first and last trajectory is a polynomial of fourth degree whilst a polynomial of third degree is used for the inner trajectories \citep{spong2008robot}.
 
 \begin{equation}
 q(t) = 
@@ -628,11 +627,11 @@ In figure \ref{fig:trajectories.cartesian} it can be observed that the obstacle 
 \end{center}
 \end{figure}
 
-The matlab code to simulate the described trajectories is in \ref{apendix:trajectories_script}. 
+The Matlab code to simulate the described trajectories is in \ref{apendix:trajectories_script}. 
 
 \section{Part 2}
 \subsection{Inverse Kinematics}
-The manipilator of this part is a planar parallel robot which applied in surgery. The schematic diagram is shown in  figure \ref{fig:Parallel}. Concretely, The task is to find the solutions for $\psi_i$ and $\theta_i$ given the position coordiante of $C$ with respect to B and the rotation angle $a$ of the platform.
+The manipulator of this part is a planar parallel robot which applied in surgery. The schematic diagram is shown in  figure \ref{fig:Parallel}. Concretely, The task is to find the solutions for $\psi_i$ and $\theta_i$ given the position coordinate of $C$ with respect to B and the rotation angle $a$ of the platform.
 \begin{figure}[htbp] 
 \begin{center}
 \includegraphics[width=\textwidth]{images/Parallel}
@@ -641,18 +640,18 @@ The manipilator of this part is a planar parallel robot which applied in surgery
 \end{center}
 \end{figure}
 
-The core thinking is that finding the coordinate of $PP_i$ regarding to $PB_i$, which can be derived from the vector  $\overrightarrow{PB_i PP_i}$. According to vector chian, $\overrightarrow{PB_i PP_i}$ can be expressed as
+The core thinking is that finding the coordinate of $PP_i$ regarding to $PB_i$, which can be derived from the vector  $\overrightarrow{PB_i PP_i}$. According to vector chain, $\overrightarrow{PB_i PP_i}$ can be expressed as
 
 \begin{equation}
 \overrightarrow{PB_i PP_i} = \overrightarrow{B PP_i} - \overrightarrow{B PB_i}
 \end{equation}
 
-Where, $\overrightarrow{B PB_i}$ is known since ponint $B$ and $PB_i$ is fixed. Then $\overrightarrow{B PP_i}$ can be derived by vector chain again, which is
+Where, $\overrightarrow{B PB_i}$ is known since point $B$ and $PB_i$ is fixed. Then $\overrightarrow{B PP_i}$ can be derived by vector chain again, which is
 \begin{equation}
 \label{eq:parallel_BPP}
 \overrightarrow{B PP_i} = \overrightarrow{BC} + \overrightarrow{C PP_i} = \overrightarrow{BC} + Rot(z,a)\overrightarrow{C_0PP_0} 
 \end{equation}
-Where $Rot(z,a)$ is the rotation matrix which rorate around $Z$ axis for $a$ degree, $\overrightarrow{C_0PP_0}$ is the initial vector of $\overrightarrow{C PP_i}$ when $a=0$. Therefore, the equation (\ref{eq:parallel_BPP}) can be explicit according to known parameters ($X_c,Y_c$ are the coordinates of $C$,$r_{plat}$ is the radium of platform,$i$ is the number of legs)
+Where $Rot(z,a)$ is the rotation matrix which rotate around $Z$ axis for $a$ degree, $\overrightarrow{C_0PP_0}$ is the initial vector of $\overrightarrow{C PP_i}$ when $a=0$. Therefore, the equation (\ref{eq:parallel_BPP}) can be explicit according to known parameters ($X_c,Y_c$ are the coordinates of $C$,$r_{plat}$ is the radium of platform,$i$ is the number of legs)
 
 \begin{equation}
 \overrightarrow{B PP_i} =
@@ -738,13 +737,13 @@ After calculating $\theta$, $\psi$ can be worked out through geometric method as
 tan\psi = \frac{PP_iE}{M_iE}=\frac{Y_{PP_i}-r_Asin\theta_i}{X_{PP_i}-r_Acos\theta_i}
 \end{equation}
 
-Theoratically, there should be 2 solutions for $\psi$ due the existence of $\theta1$ and $\theta2$, however, the result of $tan\psi$ is the same computed by $\theta1$ and $\theta2$. Therefore, $\psi$ is expressed as
+Theoretically, there should be 2 solutions for $\psi$ due the existence of $\theta1$ and $\theta2$, however, the result of $tan\psi$ is the same computed by $\theta1$ and $\theta2$. Therefore, $\psi$ is expressed as
 \begin{equation}
 \psi = atan2(Y_{PP_i}-r_Asin\theta_i,X_{PP_i}-r_Acos\theta_i )
 \end{equation}
 
 \subsection{Workspace}
-Algebraic approach relying on the powerful computation of Matlab is a feasible way to calculate the workspace of the end effector. The core thought is that the real root of the equation (\ref{eq:parallel_t}) exist for each leg when the point is reachable for the manipulator. Namely, three pairs of $t_1,t_2$ for every leg are real number within the workspace. Concretely, we apply the if statement to judge the value of $t_1, t_2$. Tt is a robust method to fit the real workspace by thousands of points forming a region. Then, through specify the coordinate range of point $C$, we can derive the workspace. Concretely, we select a wide range for $X_c,Y_c$ and draw the workspace for different $a$ respectively.
+Algebraic approach relying on the powerful computation of Matlab is a feasible way to calculate the workspace of the end effector. The core thought is that the real root of the equation (\ref{eq:parallel_t}) exist for each leg when the point is reachable for the manipulator. Namely, three pairs of $t_1,t_2$ for every leg are real number within the workspace. Concretely, we apply the if statement to judge the value of $t_1, t_2$. It is a robust method to fit the real workspace by thousands of points forming a region. Then, through specify the coordinate range of point $C$, we can derive the workspace. Concretely, we select a wide range for $X_c,Y_c$ and draw the workspace for different $a$ respectively.
  
 \begin{figure}[htbp] 
 \begin{center}
@@ -773,9 +772,10 @@ It is obvious from the picture \ref{fig:parallel_workspace1} that different angl
 \section{Conclusion}
 In conclusion, the most difficult section is the inverse kinematics as the difficulties are result from the essence of the equations which are non-linear, transcendental and coupled. To deal with those difficulties we combined the algebraic and the geometric method. Besides, it was also tough to implement the trajectories, specially the straight line, because a polynomial approximation was used if not enough via points are provided the trajectory does not fit the straight line.
 
-Apart from these academic knownledge, we also learned the tool 'LaTeX', 'Github' and 'AutoCAD' which improved the quality and efficience of this assignment. 
+Apart from these academic knowledge, we also learned the tool 'LaTeX', 'Github' and 'AutoCAD' which improved the quality and efficiency of this assignment. 
 
-Finally, the contributions proportion needs to been stated clearly that Moreno Carrillo contributes $70\%$ and Mang Ning accounts for $30\%$ throughout the assigment.
+Finally, the contributions proportion needs to been stated clearly that Moreno Carrillo contributes $60\%$ and Mang Ning accounts for $40\%$ throughout the assignment.
+
 %----------- Rodrigo's paragraph start ---------------
 Talking about the inverse Jacobian method, I found really interesting how the inverse kinematics is solved. Moreover, the procedure is very similar to the Method of Steepest Descent described by \citep{Haykin:1991} where the optimal solution to the Wiener filter is found, and it is a little obvious because the Jacobian is the generalization of the derivative for vector valued functions $f:R^n \to R^n$. 
 
@@ -817,7 +817,7 @@ The method seems to be very useful when the distance between the desired point a
 \label{apendix:Producing dataset}
 \verbatiminput{code/Part3/Part3_NN_produce_dataset.m}
 
-\subsection{Training nueral network and predicting}
+\subsection{Training neural network and predicting}
 \label{apendix:Training neural network}
 \verbatiminput{code/Part3/Part3_NN_IK_for_q3.m}
 
@@ -828,14 +828,5 @@ The method seems to be very useful when the distance between the desired point a
 \bibliographystyle{abbrvnat}
 \setcitestyle{authoryear,open={(},close={)}}
 \bibliography{biblio}
-
-
-
-
-
-
-
-
-
 
 \end{document}
